--- a/Semana 08/E1GerenciadorDeLivros/nbproject/private/private.properties
+++ b/Semana 08/E1GerenciadorDeLivros/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/iftm/.netbeans/8.2/build.properties
+user.properties.file=C:\\Users\\Fabricio\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
